--- a/index.html
+++ b/index.html
@@ -287,7 +287,7 @@
                 allowfullscreen="">
         </iframe>
         <div>
-            <nav>
+            <div class="contactDetails">
                 <div class="tel">
                     <a href="tel:+32 4 98 92 52 00"><span>04 98 92 52 00</span></a>
                     <a href="tel:+32 3 450 88 65"><span>03 450 88 65</span></a>
@@ -302,7 +302,7 @@
                         <span>2550 Kontich</span>
                     </a>
                 </div>
-            </nav>
+            </div>
             <form id="mailForm">
                 <h1>stuur ons een mail</h1>
                 <label for="name">Naam<input type="text" id="name" placeholder="naam hier"></label>
@@ -342,7 +342,7 @@
     </section>
 
     <footer>
-        <nav>
+        <div class="contactDetails">
             <div class="tel">
                 <a href="tel:+32 4 98 92 52 00"><span>04 98 92 52 00</span></a>
                 <a href="tel:+32 3 450 88 65"><span>03 450 88 65</span></a>
@@ -357,7 +357,7 @@
                 <span>2550 Kontich</span>
                 </a>
             </div>
-        </nav>
+        </div>
     </footer>
 
     <script src="index.js"></script>
